--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,20 +15,16 @@
             android:id="@+id/ed_amount_text"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_45sdp"
-            android:layout_margin="@dimen/_20sdp"
             android:hint="@string/type_amount_hint"
-            android:imeOptions="actionDone"
-            android:inputType="number"
-            android:maxLength="20"
-            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            style="@style/amountEditTextStyle" />
 
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btnPay"
-            style="@style/circularProgressStyle"
+            style="@style/AppButtonStyle"
             android:text="@string/pay"
             app:finalCornerAngle="@dimen/_50sdp"
             app:initialCornerAngle="@dimen/_50sdp"
