--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#818181</color>
     <color name="green">#27ce00</color>
+    <color name="white_gray">#e6e6e6</color>
 </resources>
