--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="circularProgressStyle" parent="Widget.AppCompat.Button.Colored">
+    <style name="AppButtonStyle" parent="Widget.AppCompat.Button.Colored">
         <item name="android:layout_width">0dp</item>
         <item name="android:background">@drawable/button_shape_default_rounded</item>
         <item name="android:layout_margin">@dimen/_20sdp</item>
         <item name="android:layout_height">@dimen/_35sdp</item>
+    </style>
+
+    <style name="amountEditTextStyle">
+        <item name="android:layout_margin">@dimen/_20sdp</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:inputType">number</item>
+        <item name="android:maxLength">20</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="viewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/_1sdp</item>
+        <item name="android:background">@color/white_gray</item>
+        <item name="android:layout_marginHorizontal">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+    </style>
+
+    <style name="AppSmallTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 </resources>
