--- a/app/src/main/res/drawable/google_pay.xml
+++ b/app/src/main/res/drawable/google_pay.xml
@@ -1,6 +1,6 @@
-<vector android:autoMirrored="true" android:height="800dp"
+<vector android:autoMirrored="true" android:height="@dimen/_30sdp"
     android:viewportHeight="259.7" android:viewportWidth="566.8"
-    android:width="1200dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="@dimen/_80sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#5f6368" android:pathData="M271.6,127.87v50.75h-16.1L255.5,53.29h42.7a38.61,38.61 0,0 1,27.65 10.85,34.88 34.88,0 0,1 11.55,26.45 34.72,34.72 0,0 1,-11.55 26.6q-11.2,10.68 -27.65,10.67h-26.6zM271.6,68.72v43.75h27a21.28,21.28 0,0 0,15.93 -6.48,21.36 21.36,0 0,0 0,-30.63 21,21 0,0 0,-15.93 -6.65h-27zM374.5,90.07q17.85,0 28.18,9.54 10.33,9.54 10.32,26.16v52.85h-15.4v-11.9h-0.7q-10,14.7 -26.6,14.7 -14.17,0 -23.71,-8.4a26.82,26.82 0,0 1,-9.54 -21q0,-13.31 10.06,-21.17 10.06,-7.86 26.86,-7.88 14.34,0 23.62,5.25v-3.68a18.33,18.33 0,0 0,-6.65 -14.25,22.8 22.8,0 0,0 -15.54,-5.87q-13.49,0 -21.35,11.38l-14.18,-8.93q11.7,-16.8 34.63,-16.8zM353.67,152.37a12.86,12.86 0,0 0,5.34 10.5,19.64 19.64,0 0,0 12.51,4.2 25.67,25.67 0,0 0,18.11 -7.52q8,-7.53 8,-17.67 -7.53,-6 -21,-6 -9.81,0 -16.36,4.73c-4.41,3.2 -6.6,7.09 -6.6,11.76zM501.4,92.87l-53.76,123.55h-16.62l19.95,-43.23 -35.35,-80.32h17.5l25.55,61.6h0.35l24.85,-61.6z"/>
     <path android:fillColor="#4285f4" android:pathData="M206.54,116.93a85.79,85.79 0,0 0,-1.24 -14.64h-67.9v27.73h38.89a33.33,33.33 0,0 1,-14.38 21.88v18h23.21c13.59,-12.53 21.42,-31.06 21.42,-52.97z"/>
     <path android:fillColor="#34a853" android:pathData="M137.4,187.29c19.43,0 35.79,-6.38 47.72,-17.38l-23.21,-18c-6.46,4.38 -14.78,6.88 -24.51,6.88 -18.78,0 -34.72,-12.66 -40.42,-29.72L73.07,129.07v18.55a72,72 0,0 0,64.33 39.67z"/>
