--- a/app/src/main/res/layout/payment_type_item.xml
+++ b/app/src/main/res/layout/payment_type_item.xml
@@ -4,17 +4,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/_8sdp"
     app:cardElevation="@dimen/_1sdp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginHorizontal="@dimen/_5sdp"
     style="@style/card_style">
 
     <ImageView
         android:id="@+id/iv_payment_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/google_pay" />
