--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -27,13 +27,12 @@
     <ImageView
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
-        android:src="@drawable/baseline_close_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_10sdp"
+        android:padding="@dimen/_5sdp"
+        android:src="@drawable/baseline_close_24"
         app:layout_constraintBottom_toBottomOf="@id/tv_payment_for"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view"
@@ -76,12 +75,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:orientation="horizontal">
-        <TextView
-            style="@style/AppSmallTextStyle"
-            android:layout_weight="1"
-            android:text="@string/select_title" />
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                style="@style/AppSmallTextStyle"
+                android:layout_weight="1"
+                android:text="@string/select_title" />
 
             <TextView
                 style="@style/AppSmallTextStyle"
@@ -89,11 +89,13 @@
                 android:gravity="end"
                 android:text="@string/edit" />
         </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_payments_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
             android:orientation="horizontal"
-            android:id="@+id/rv_payments_type"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="3" />
 
@@ -109,24 +111,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="wrap_content">
-        <TextView
-            style="@style/AppSmallTextStyle"
-            android:text="@string/we_accept_title" />
-            <ImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/visa_logo"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                />
-            <ImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
 
-                android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/master_card_logo"
-                />
+            <TextView
+                style="@style/AppSmallTextStyle"
+                android:text="@string/we_accept_title" />
+
+            <ImageView
+                style="@style/small_icons_style"
+                android:src="@drawable/visa_logo" />
+
+            <ImageView
+                style="@style/small_icons_style"
+                android:src="@drawable/master_card_logo" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
