--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,11 +29,18 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/gray</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
     </style>
 
     <style name="card_style">
         <item name="android:layout_width">@dimen/_80sdp</item>
         <item name="android:layout_height">@dimen/_30sdp</item>
-        <item name="android:layout_margin">@dimen/_3sdp</item>
+    </style>
+
+    <style name="small_icons_style">
+        <item name="android:layout_width">@dimen/_15sdp</item>
+        <item name="android:layout_height">@dimen/_15sdp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_10sdp</item>
     </style>
 </resources>
