--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".features.main_screen_user_input.presentation.MainUserInputFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    >
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <EditText
+        android:id="@+id/ed_amount_text"
+        style="@style/amountEditTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".features.main_screen_user_input.presentation.MainUserInputFragment">
-
-        <EditText
-            android:id="@+id/ed_amount_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_45sdp"
-            android:hint="@string/type_amount_hint"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/amountEditTextStyle" />
+        android:layout_height="@dimen/_45sdp"
+        android:fontFamily="sans-serif"
+        android:hint="@string/type_amount_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/btnPay"
-            style="@style/AppButtonStyle"
-            android:text="@string/pay"
-            app:finalCornerAngle="@dimen/_50sdp"
-            app:initialCornerAngle="@dimen/_50sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:spinning_bar_color="@color/white"
-            app:spinning_bar_width="@dimen/_3sdp" />
+    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+        android:id="@+id/btnPay"
+        style="@style/AppButtonStyle"
+        android:fontFamily="sans-serif"
+        android:text="@string/pay"
+        app:finalCornerAngle="@dimen/_50sdp"
+        app:initialCornerAngle="@dimen/_50sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:spinning_bar_color="@color/white"
+        app:spinning_bar_width="@dimen/_3sdp" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
