--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     >
 
+    <include layout="@layout/custom_toolbar"
+        android:id="@+id/custom_toolbar"/>
     <ImageView
         android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_150sdp"
@@ -25,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
         app:navGraph="@navigation/app_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
