--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -2,39 +2,31 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:orientation="vertical">
+    android:layout_height="?attr/actionBarSize"
+    android:layout_marginHorizontal="@dimen/_8sdp"
+    android:layout_marginTop="@dimen/_20sdp"
+    android:orientation="vertical"
+    app:contentInsetStart="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="3"
         android:orientation="horizontal"
-        >
+        android:weightSum="3">
+
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_title"
-            android:layout_weight="1"
-            android:background="@color/gray"
-            android:gravity="center"
-            android:textSize="@dimen/_18ssp"
-            />
+            style="@style/toolbarButtonStyle"
+            android:text="@string/settings_title" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/checkout_sdk_title"
-            android:textSize="@dimen/_18ssp"
-            android:layout_weight="1"
-            />
+            style="@style/toolBarTextStyle"
+            android:text="@string/checkout_sdk_title" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/toolbarButtonStyle"
             android:text="@string/options"
-            android:textSize="@dimen/_18ssp"
+
             />
 
     </LinearLayout>
