--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray">#818181</color>
     <color name="green">#27ce00</color>
     <color name="white_gray">#e6e6e6</color>
+    <color name="blue_color">#007afe</color>
 </resources>
