--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,8 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">@color/gray</item>
-        <item name="fontFamily">@font/sans</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="fontFamily">@font/sf_pro_regular</item>
 
     </style>
 
