--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,12 @@
     </style>
 
     <style name="amountEditTextStyle">
-        <item name="android:layout_margin">@dimen/_20sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_5sdp</item>
+        <item name="android:padding">@dimen/_5sdp</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="android:inputType">number</item>
+        <item name="android:background">@drawable/rounded_edit_text_cornern</item>
         <item name="android:maxLength">20</item>
         <item name="android:singleLine">true</item>
     </style>
