--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
-        android:text="KD 100000"
+        tools:text="KD 100000"
         android:textSize="@dimen/_24ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view" />
@@ -185,6 +185,7 @@
             style="@style/AppButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/btn_pay_tapPayment"
             android:text="Pay KD 10000" />
 
         <TextView
