--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -30,9 +30,10 @@
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:padding="@dimen/_5sdp"
+        android:padding="@dimen/_2sdp"
+        android:id="@+id/iv_close_dialog"
         android:src="@drawable/baseline_close_24"
-        app:layout_constraintBottom_toBottomOf="@id/tv_payment_for"
+        app:layout_constraintBottom_toBottomOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
