--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -1,203 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_margin="@dimen/_10sdp"
-        android:src="@drawable/tap_payment_logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_payment_for"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:text="@string/title_"
-        app:layout_constraintStart_toEndOf="@id/iv_icon"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:padding="@dimen/_2sdp"
-        android:id="@+id/iv_close_dialog"
-        android:src="@drawable/baseline_close_24"
-        app:layout_constraintBottom_toBottomOf="@id/view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view"
-        style="@style/viewStyle"
-        android:layout_margin="@dimen/_10sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_payment_for" />
-
-    <TextView
-        android:id="@+id/tv_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        tools:text="KD 100000"
-        android:textSize="@dimen/_24ssp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view" />
-
-    <View
-        android:id="@+id/view2"
-        style="@style/viewStyle"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_amount" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white_gray"
-        android:orientation="vertical"
-        android:padding="@dimen/_10sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view2">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                style="@style/AppSmallTextStyle"
-                android:layout_weight="1"
-                android:text="@string/select_title" />
-
-            <TextView
-                style="@style/AppSmallTextStyle"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:text="@string/edit" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_payments_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="3" />
-
-        <TextView
-            style="@style/AppSmallTextStyle"
-            android:text="@string/enter_card_title" />
-
-
-        <androidx.cardview.widget.CardView
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardElevation="@dimen/_1sdp"
-            android:id="@+id/card_layout"
-            android:layout_marginTop="@dimen/_10sdp"
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:src="@drawable/tap_payment_logo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="match_parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_payment_for"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_margin="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:text="@string/title_"
+            app:layout_constraintStart_toEndOf="@id/iv_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_close_dialog"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:padding="@dimen/_2sdp"
+            android:src="@drawable/baseline_close_24"
+            app:layout_constraintBottom_toBottomOf="@id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view"
+            style="@style/viewStyle"
+            android:layout_margin="@dimen/_10sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_payment_for" />
+
+        <TextView
+            android:id="@+id/tv_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:textSize="@dimen/_24ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view"
+            tools:text="test" />
+
+        <View
+            android:id="@+id/view2"
+            style="@style/viewStyle"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_amount" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:weightSum="3"
-            android:padding="@dimen/_10sdp"
-            android:orientation="horizontal">
+            android:background="@color/white_gray"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/_10sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view2">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:inputType="number"
-                android:drawablePadding="@dimen/_3sdp"
-                android:drawableStart="@drawable/credit_card"
-                android:layout_weight="1"
-                android:textSize="@dimen/_12ssp"
-                android:maxLength="14"
-                android:hint="@string/card_number_title"
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:inputType="text"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_weight="1"
-                android:textSize="@dimen/_12ssp"
-                android:maxLength="5"
-                android:hint="@string/mm_yy_title"
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:maxEms="3"
-                android:drawableEnd="@drawable/scan_icon"
-                android:textSize="@dimen/_12ssp"
-                android:inputType="number"
-                android:layout_weight="1"
-                android:maxLength="3"
-                android:hint="@string/cvv_title"
-                />
-        </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    style="@style/AppSmallTextStyle"
+                    android:layout_weight="1"
+                    android:text="@string/select_title" />
+
+                <TextView
+                    style="@style/AppSmallTextStyle"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@string/edit" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_payments_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="3" />
 
             <TextView
                 style="@style/AppSmallTextStyle"
-                android:text="@string/we_accept_title" />
+                android:text="@string/enter_card_title" />
 
-            <ImageView
-                style="@style/small_icons_style"
-                android:src="@drawable/visa_logo" />
 
-            <ImageView
-                style="@style/small_icons_style"
-                android:src="@drawable/master_card_logo" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardElevation="@dimen/_1sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp"
+                    android:weightSum="3">
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.3"
+                        android:background="@null"
+                        android:drawableStart="@drawable/credit_card"
+                        android:drawablePadding="@dimen/_3sdp"
+                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:hint="@string/card_number_title"
+                        android:inputType="number"
+                        android:maxLength="14"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.7"
+                        android:background="@null"
+                        android:gravity="end"
+                        android:id="@+id/ed_expiry"
+                        android:hint="@string/mm_yy_title"
+                        android:inputType="number"
+                        android:digits="123456789/"
+                        android:maxLength="5"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:drawableEnd="@drawable/scan_icon"
+                        android:gravity="center"
+                        android:hint="@string/cvv_title"
+                        android:inputType="number"
+                        android:maxEms="3"
+                        android:maxLength="3"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    style="@style/AppSmallTextStyle"
+                    android:text="@string/we_accept_title" />
+
+                <ImageView
+                    style="@style/small_icons_style"
+                    android:src="@drawable/visa_logo" />
+
+                <ImageView
+                    style="@style/small_icons_style"
+                    android:src="@drawable/master_card_logo" />
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_pay_tapPayment"
+                style="@style/AppButtonStyle"
+                android:layout_width="match_parent"
+                android:alpha="0.3"
+                android:backgroundTint="@color/gray"
+                android:text="Pay KD 10000" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/_15sdp"
+                android:text="@string/powered_by_title" />
+
+
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
-            style="@style/AppButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_pay_tapPayment"
-            android:text="Pay KD 10000" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/powered_by_title" />
-
-
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
