--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:background">@drawable/button_shape_default_rounded</item>
         <item name="android:layout_margin">@dimen/_20sdp</item>
-        <item name="android:layout_height">@dimen/_35sdp</item>
+        <item name="android:layout_height">@dimen/_30sdp</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -33,7 +33,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/gray</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_5sdp</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="card_style">
@@ -44,7 +45,7 @@
     <style name="small_icons_style">
         <item name="android:layout_width">@dimen/_15sdp</item>
         <item name="android:layout_height">@dimen/_15sdp</item>
-        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_5sdp</item>
         <item name="android:layout_marginHorizontal">@dimen/_10sdp</item>
     </style>
 
@@ -53,6 +54,7 @@
         <item name="android:windowIsFloating">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
     </style>
 
     <style name="toolbarButtonStyle">
