--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,8 @@
         style="@style/amountEditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_30sdp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/gray"
         android:hint="@string/type_amount_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
