added refactor to tapPayementBottomSheet

--- a/app/src/main/res/layout/payment_type_item.xml
+++ b/app/src/main/res/layout/payment_type_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="@dimen/_5sdp"
+    app:cardBackgroundColor="@color/white"
     app:cardElevation="@dimen/_2sdp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
