--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="android:layout_height">@dimen/_30sdp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
     </style>
 
     <style name="amountEditTextStyle">
@@ -26,7 +27,7 @@
         <item name="android:layout_height">@dimen/_1sdp</item>
         <item name="android:background">@color/white_gray</item>
         <item name="android:layout_marginHorizontal">@dimen/_10sdp</item>
-        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_15sdp</item>
     </style>
 
     <style name="AppSmallTextStyle">
