refactor payment_type_item to be wrap_content in width

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
     </style>
 
     <style name="card_style">
-        <item name="android:layout_width">@dimen/_80sdp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/_35sdp</item>
 
     </style>
