--- a/app/src/main/res/layout/payment_type_item.xml
+++ b/app/src/main/res/layout/payment_type_item.xml
@@ -45,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="****4323"
+            android:layout_marginHorizontal="@dimen/_5sdp"
             android:textSize="@dimen/_12ssp"
             app:layout_constraintStart_toEndOf="@id/iv_visa_type"
             app:layout_constraintEnd_toEndOf="parent"
